language/move-lang/tests/move_check/expansion/friend_decl_nonexistent_alias.exp
error[E03002]: unbound module
  ┌─ tests/move_check/expansion/friend_decl_nonexistent_alias.move:3:12
  │
3 │     friend Nonexistent;
  │            ^^^^^^^^^^^ Unbound module alias 'Nonexistent'

